--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -158,10 +158,9 @@
 
   <footer class="main-footer">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 0.0.1
+      <b>Version</b> 0.0.2
     </div>
-    <strong>Copyright &copy; 2019 <a href="https://hedonsoftware.com">HedonSoftware Ltd</a>.</strong> All rights
-    reserved.
+    <strong>Made by Kamil Skowron with Elixir and <3
   </footer>
 
   <!-- Control Sidebar -->
