--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -124,6 +124,7 @@
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">MAIN NAVIGATION</li>
         <li><a href="/streaming-settings"><i class="fa fa-cog"></i> <span>Streaming settings</span></a></li>
+        <li><a href="/backtesting"><i class="fa fa-flask"></i> <span>Backtesting</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
