--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -15,6 +15,15 @@
   <!-- Ionicons -->
   <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/bower_components/Ionicons/css/ionicons.min.css") %>">
   <!-- <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css"> -->
+  <!-- daterange picker -->
+  <!-- <link rel="stylesheet" href="../../bower_components/bootstrap-daterangepicker/daterangepicker.css"> -->
+  <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/bower_components/bootstrap-daterangepicker/daterangepicker.css") %>">
+  <!-- bootstrap datepicker -->
+  <!-- <link rel="stylesheet" href="../../bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css"> -->
+  <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css") %>">
+  <!-- Select2 -->
+  <!-- <link rel="stylesheet" href="../../bower_components/select2/dist/css/select2.min.css"> -->
+  <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/bower_components/select2/dist/css/select2.min.css") %>">
   <!-- Theme style -->
   <!-- <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css"> -->
   <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/dist/css/AdminLTE.min.css") %>">
@@ -162,7 +171,7 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 0.0.2
     </div>
-    <strong>Made by Kamil Skowron with Elixir and <3
+    <strong>Made with Elixir and <3
   </footer>
 
   <!-- Control Sidebar -->
@@ -360,13 +369,20 @@
   <div class="control-sidebar-bg"></div>
 </div>
 <!-- ./wrapper -->
-
 <!-- jQuery 3 -->
 <!-- <script src="../../bower_components/jquery/dist/jquery.min.js"></script> -->
 <script src="<%= Routes.static_path(@conn, "/bower_components/jquery/dist/jquery.min.js") %>"></script>
 <!-- Bootstrap 3.3.7 -->
 <!-- <script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
 <script src="<%= Routes.static_path(@conn, "/bower_components/bootstrap/dist/js/bootstrap.min.js") %>"></script>
+<!-- Select2 -->
+<!-- <script src="../../bower_components/select2/dist/js/select2.full.min.js"></script> -->
+<script src="<%= Routes.static_path(@conn, "/bower_components/select2/dist/js/select2.full.min.js") %>"></script>
+<!-- date-range-picker -->
+<!-- <script src="../../bower_components/moment/min/moment.min.js"></script> -->
+<!-- <script src="../../bower_components/bootstrap-daterangepicker/daterangepicker.js"></script> -->
+<script src="<%= Routes.static_path(@conn, "/bower_components/moment/min/moment.min.js") %>"></script>
+<script src="<%= Routes.static_path(@conn, "/bower_components/bootstrap-daterangepicker/daterangepicker.js") %>"></script>
 <!-- SlimScroll -->
 <!-- <script src="../../bower_components/jquery-slimscroll/jquery.slimscroll.min.js"></script> -->
 <script src="<%= Routes.static_path(@conn, "/bower_components/jquery-slimscroll/jquery.slimscroll.min.js") %>"></script>
@@ -383,4 +399,3 @@
 <script src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
 </body>
 </html>
-
