--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -134,6 +134,7 @@
         <li class="header">MAIN NAVIGATION</li>
         <li><a href="/streaming-settings"><i class="fa fa-cog"></i> <span>Streaming settings</span></a></li>
         <li><a href="/backtesting"><i class="fa fa-flask"></i> <span>Backtesting</span></a></li>
+        <li><a href="/transactions"><i class="fa fa-bar-chart"></i> <span>Transactions</span></a></li>
         <li><a href="/naive-trader-settings"><i class="fa fa-cog"></i> <span>Naive trader settings</span></a></li>
       </ul>
     </section>
