--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -43,7 +43,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>T</b>rto</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Toretto</b></span>
+      <span class="logo-lg"><b>Igthorn</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
