--- a/apps/ui/lib/ui_web/templates/layout/app.html.eex
+++ b/apps/ui/lib/ui_web/templates/layout/app.html.eex
@@ -393,6 +393,9 @@
 <!-- AdminLTE App -->
 <!-- <script src="../../dist/js/adminlte.min.js"></script> -->
 <script src="<%= Routes.static_path(@conn, "/dist/js/adminlte.min.js") %>"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+
 <!-- AdminLTE for demo purposes -->
 <!-- <script src="../../dist/js/demo.js"></script> -->
 <script src="<%= Routes.static_path(@conn, "/dist/js/demo.js") %>"></script>
